Stats: fix tops gaps

--- a/src/public/less/pages/statistics.less
+++ b/src/public/less/pages/statistics.less
@@ -517,6 +517,10 @@
 			}
 
 			@media (min-width: @screen-md-min) {
+				column-gap: 24px;
+			}
+
+			@media (min-width: @screen-lg-min) {
 				column-gap: 48px;
 			}
 		}
